trunk/Archive2/77/773912987e1506/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:3:10: error: duplicate 'const'
    const const const const const int const i = 0;
          ^
main.cpp:3:16: error: duplicate 'const'
    const const const const const int const i = 0;
                ^
main.cpp:3:22: error: duplicate 'const'
    const const const const const int const i = 0;
                      ^
main.cpp:3:28: error: duplicate 'const'
    const const const const const int const i = 0;
                            ^
main.cpp:3:38: error: duplicate 'const'
    const const const const const int const i = 0;
                                      ^
main.cpp:3:44: warning: unused variable 'i' [-Wunused-variable]
    const const const const const int const i = 0;
                                            ^
