trunk/Archive2/77/773912987e1506/main.cpp

int main() {
   const const const const const int const i = 0;
}